--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-streamlit==1.40.0
-pandas==2.2.3
-plotly==5.10.0
-requests
-Pillow
+streamlit==1.28.0
+pandas==2.0.3
+plotly==5.9.0
+numpy==1.24.3
+requests==2.31.0
+Pillow==10.0.0
