--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit==1.28.0
-pandas==2.0.3
-plotly==5.9.0
-numpy==1.24.3
+streamlit==1.29.0
+pandas==2.1.3
+plotly==5.18.0
+numpy>=1.26.0
 requests==2.31.0
-Pillow==10.0.0
+Pillow==10.1.0
